kubernetes/github-token-exchange/base/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-token-exchange
  namespace: microservices
spec:
  minReadySeconds: 10
  replicas: 1
  selector:
    matchLabels:
      app: github-token-exchange
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "3000"
        prometheus.io/scrape: "true"
      labels:
        app: github-token-exchange
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - github-token-exchange
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - env:
            - name: KUBE_REDEPLOY
              value: "0"
          image: gcr.io/searchspring-devops/github.com/searchspring/github-token-exchange:latest
          imagePullPolicy: IfNotPresent
          name: github-token-exchange
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 1m
              memory: 10Mi
      imagePullSecrets:
        - name: gcr-secret
