kubernetes/github-token-exchange/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-token-exchange
  namespace: microservices
spec:
  rules:
    - host: token2.kube.searchspring.io
      http:
        paths:
          - backend:
              service:
                name: github-token-exchange
                port:
                  number: 80
            path: /
            pathType: Prefix
